Kendrick: Fixed the analytics table misalignment.

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -135,7 +135,6 @@ td.container_pop {
 td.container_pop, .container th {
 	padding-bottom: 2%;
 	padding-top: 2%;
-  padding-left:2%;
 }
 
 /* Background-color of the odd rows */
